# ucode

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat
custom/: config.h
data/: testfile
misc/: build.bat  run.bat  shell.bat
src/: main.cpp  ucode_command.h  ucode_editor.cpp  ucode_editor.h  ucode_file_chooser.cpp  ucode_file_chooser.h  ucode_input.cpp  ucode_input.h  ucode_lexer.cpp  ucode_lexer.h  ucode_log.cpp  ucode_log.h  ucode_platform.cpp  ucode_platform.h  ucode_renderer.cpp  ucode_renderer.h  ucode_terminal.cpp  ucode_terminal.h  ucode_test.h  ucode_utils.cpp  ucode_utils.h  win32_main.cpp
